tools: update osrs.sh jagex options to use recommended settings from wiki